--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zppv",
+  "name": "clubedoamigurumi",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,25 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.2.4",
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@splidejs/splide": "^4.0.7",
-    "framer-motion": "^6.5.1",
-    "next": "12.2.2",
-    "react": "18.2.0",
-    "react-countup": "^6.3.0",
-    "react-device-frameset": "^1.3.2",
-    "react-dom": "18.2.0",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@chakra-ui/icons": "^1.0.15",
+    "@chakra-ui/react": "^1.6.8",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@u-wave/react-vimeo": "^0.9.5",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
+    "framer-motion": "^4",
+    "next": "11.1.2",
+    "react": "17.0.2",
+    "react-device-detect": "^2.0.1",
+    "react-dom": "17.0.2",
     "react-facebook-pixel": "^1.0.4",
-    "react-icons": "^4.4.0",
-    "react-id-swiper": "^4.0.0",
-    "react-modal-video": "^1.2.9",
-    "react-visibility-sensor": "^5.1.1",
-    "swiper": "6.8.4"
+    "react-icons": "^4.3.1",
+    "react-observer-api": "^1.0.11",
+    "react-photo-gallery": "^8.0.0",
+    "react-responsive-carousel": "^3.2.21",
+    "react-youtube": "^7.13.1",
+    "styled-components": "^5.3.1",
+    "wow.js": "^1.2.2"
   },
   "devDependencies": {
-    "eslint": "8.20.0",
-    "eslint-config-next": "12.2.2"
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2"
   }
 }
